Minor fix for dark mode

--- a/src/components/dark-mode/style.scss
+++ b/src/components/dark-mode/style.scss
@@ -54,7 +54,8 @@ $gray-800: #3a3f44;
 		filter: invert(1);
 	}
 
-	textarea {
+	textarea,
+	input {
 		color: $dark !important;
 	}
 }
